[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tw-stock-daily"
version = "0.1.0"
description = "Taiwan stock daily DB utilities and updater"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "lxml>=5.0.0",
]

[tool.setuptools]
py-modules = ["tw_stock"]
